# notebook

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  PLAN_SPEC.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: changelog.md
.claude/skills/changelog/: SKILL.md
.claude/skills/changelog/scripts/: gather.sh
.claude/skills/gitup/: SKILL.md
.claude/skills/gitup/scripts/: gitup.sh
app/: __init__.py  main.py
app/api/routes/: health.py  items.py
app/core/: config.py
app/models/: item.py
app/services/: items.py
tests/: conftest.py  test_items.py
