[project]
name = "fast_back"
version = "0.1.0"
description = "A FastAPI backend service."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/Query() idiom intentionally calls in arg defaults.
ignore = ["B008"]
